# bot-gpt

./: .gitignore  README.md  local_shutdown.py  local_start.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  test-python-app-local.yaml
.github/workflows/: README.md  ci-cd.yml
docs/api-testing/: BOT_GPT_Backend.postman_collection.json  TEST_API.sh
docs/guides/: API_EXAMPLES.md  ARCHITECTURE.md  PROJECT_SUMMARY.md
src/main/python/test_python_app/: __init__.py  app.py
src/main/python/test_python_app/config/: __init__.py  settings.py
src/main/python/test_python_app/controller/: __init__.py
src/main/python/test_python_app/controller/routes/: __init__.py
src/main/python/test_python_app/controller/routes/v1/: __init__.py  conversations.py  documents.py  operations.py  users.py
src/main/python/test_python_app/core/: __init__.py  database.py  exceptions.py
src/main/python/test_python_app/models/: __init__.py
src/main/python/test_python_app/models/domain/: __init__.py  entities.py
src/main/python/test_python_app/models/schemas/: __init__.py  request_schemas.py
src/main/python/test_python_app/services/: __init__.py  conversation_service.py  llm_service.py  rag_service.py
src/test/python/tests/: __init__.py  conftest.py
src/test/python/tests/integration/: __init__.py  test_api.py
src/test/python/tests/unit/: __init__.py  test_services.py
